# Aneja-Lab-Public-CapsNet

./: .gitattributes  .gitignore  .pre-commit-config.yaml  app.py  environment.yml  pyproject.toml
.github/workflows/: python-package-conda.yml
data/datasets_local/: train_outputs.csv
notebooks/: gpei_hartmann_service.ipynb
src/capsnet/: capsnet_model.py  capsnet_test.py  capsnet_train.py
src/capsnet/engine/: data_loader.py  loss_functions.py
src/capsnet/model/: capsnet.py  unet.py
src/capsnet/model/train/: capsnet_train.py  unet_train.py
src/capsnet/util/: model_util.py
src/engine/: data_loader.py  loss_functions.py
src/model/unet/: unet_model.py  unet_test.py
src/unet/: unet_train.py
templates/: model_comparison.html  my_template.html
tests/slow_tests/: test_capsnet.py  test_unet.py
